tests/cases/scc/error/0016-arrayinitsize.c.res
./tests/cases/scc/error/0016-arrayinitsize.c:2:17:	error:   encountered more members than expected.
exit code 1
